[package]
name = "gh-secrets"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to manage GitHub secrets"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
clap = { version = "4.5.37", features = ["derive"] }
dotenvy = "0.15"
mini-redis = "0.4.1"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.7"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
